--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>0gly</h1>        
+        <img src="0gly.jpg">        
       </header>
       <section>
 
