--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="0gly.jpg">        
+        <center><img src="0gly.jpg"></center>
       </header>
       <section>
 
