--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,16 +12,16 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper" style="max-width: 900px; margin-left: auto; margin-right: auto;">
       <header>
-        <center><img src="0gly.jpg"></center>
+        <center><img src="0gly.jpg" style="width:90%"></center>
       </header>
       <section>
 
       {{ content }}
 
       </section>
-      <footer>
+      <footer style="color:#555; font-size:1.1em">
         <center>Maintained by Lizards</center>
       </footer>
     </div>
